--- a/test/src/index.html
+++ b/test/src/index.html
@@ -1,13 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Test</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
 <body>
-  <app-root></app-root>
+<h1>Cost Catcher</h1>
+<p>Developed by SteBen Industries&trade;</p>
 </body>
 </html>
