--- a/test/src/index.html
+++ b/test/src/index.html
@@ -3,5 +3,11 @@
 <body>
 <h1>Cost Catcher</h1>
 <p>Developed by SteBen Industries&trade;</p>
+
+
+
+<div class="modifierbuttons">
+    <button id="addbill">Add New Bill</button>
+    <button id="removebill">Remove Bill</button></div>
 </body>
 </html>
