--- a/test/src/index.html
+++ b/test/src/index.html
@@ -4,7 +4,17 @@
 <h1>Cost Catcher</h1>
 <p>Developed by SteBen Industries&trade;</p>
 
-
+<div class="row">
+    <div class="column">
+        COlumn 1
+    </div>
+    <div class="column">
+        Column 2
+    </div>
+    <div class="column">
+        Column 3
+    </div>
+</div>
 
 <div class="modifierbuttons">
     <button id="addbill">Add New Bill</button>
