--- a/test/src/index.html
+++ b/test/src/index.html
@@ -4,14 +4,20 @@
 <h1>Cost Catcher</h1>
 <p>Developed by SteBen Industries&trade;</p>
 
+<!--<div class="row">
+    <div class="column">
+        Header
+    </div>
+    <div class="column">
+        List
+    </div>
+</div>-->
+
 <div class="row">
-    <div class="column">
-        Column 1
-    </div>
-    <div class="column">
-        Column 2
-    </div>
-</div>
+    <div class="column left">One</div>
+    <div class="column middle">Two</div>
+    <div class="column right">Three</div>
+  </div>
 
 <div class="modifierbuttons">
     <button id="addbill">Add New Bill</button>
